# dbt-confluent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MATERIALIZATIONS.md  README.md  hatch.toml  pyproject.toml  service.yml  setup.py  tox.ini
.github/: CODEOWNERS
.semaphore/: publish_to_codeartifact.yml  publish_to_pypi.yml  semaphore.yml
changes/: +ci.trivial.md  +confluent-sql-0.4.0.feature.md  +http-timeout.bugfix.md  +naming-cleanup.trivial.md  +restart-tests-full-refresh.trivial.md  +test.trivial.md  +towncrier-setup.misc  29.bugfix.md  29.feature.md  31.bugfix.md  32.feature.md  33.bugfix.md  34.feature.md  37.feature.md  38.feature.md  39.feature.md  40.misc.md  44.feature.md  58.bugfix.md  62.feature.md
dbt/adapters/confluent/: __init__.py  column.py  connections.py  impl.py  naming.py  utils.py
dbt/adapters/confluentcloud/: __init__.py  connections.py  impl.py
dbt/include/confluent/: dbt_project.yml  profile_template.yml
dbt/include/confluent/macros/: adapters.sql  catalog.sql  timestamps.sql
dbt/include/confluent/macros/adapters/: columns.sql  metadata.sql  relation.sql  schema.sql
dbt/include/confluent/macros/etc/: statement.sql
dbt/include/confluent/macros/get_custom_name/: get_custom_schema.sql
dbt/include/confluent/macros/materializations/models/: helpers.sql  materialized_table.sql  materialized_view.sql  streaming_source.sql  streaming_table.sql  table.sql  view.sql
dbt/include/confluent/macros/materializations/models/incremental/: default.sql  incremental.sql
dbt/include/confluent/macros/materializations/seeds/: helpers.sql
dbt/include/confluent/macros/materializations/snapshots/: helpers.sql  snapshot.sql  snapshot_merge.sql  strategies.sql
dbt/include/confluent/macros/materializations/tests/: helpers.sql  test.sql  unit.sql
dbt/include/confluent/macros/relations/: drop.sql  replace.sql
dbt/include/confluent/macros/relations/materialized_view/: alter.sql  create.sql  drop.sql  refresh.sql
dbt/include/confluent/macros/relations/table/: create.sql  drop.sql
dbt/include/confluent/macros/relations/views/: drop.sql
dbt/include/confluentcloud/: dbt_project.yml  profile_template.yml
dbt/include/confluentcloud/macros/: adapters.sql  catalog.sql
tests/: conftest.py
tests/example/: fixtures.py  test_failing_test.py
tests/functional/adapter/: _helpers.py  fixtures.py  test_adopt_existing.py  test_basic.py  test_compute_pool.py  test_materialized_table.py  test_materialized_views.py  test_regressions.py  test_schema_drift.py  test_streaming_table.py  test_unit_materialization.py
tests/unit/: test_add_query_retry.py  test_check_schema_drift.py  test_classify_statement.py  test_delete_statement.py  test_distributed_by_clause.py  test_drop_materialized_table.py  test_naming.py  test_profile_template.py  test_schema_drift.py  test_statement_needs_restart.py  test_validate_distributed_by_config.py
