[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-confluent"
description = "The Confluent Cloud adapter plugin for DBT"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["dbt", "adapter", "confluent", "cloud"]
requires-python = ">=3.10.0"
authors = [
  { name = "Confluent", email = "dev@confluent.io" },
]
maintainers = [
  { name = "Confluent", email = "dev@confluent.io" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "dbt-core~=1.11",
  "dbt-common~=1.12",
  "dbt-adapters~=1.16",
  "agate~=1.0",
  "httpx>=0.23.0,<0.29.0",
  "confluent-sql~=0.1",
]

[dependency-groups]
dev = [
  "towncrier>=25.8.0",
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
]
test = [
  "pytest>=8.4.2",
  "pytest-dotenv>=0.5.2",
  "dbt-tests-adapter>=1.10",
]

[project.urls]
Homepage = "https://github.com/confluentinc/dbt-confluent"
Repository = "https://github.com/confluentinc/dbt-confluent"

[project.entry-points."dbt.adapters"]
confluent = "dbt.adapters.confluent"

[tool.pytest.ini_options]
testpaths = ["tests/functional", "tests/unit"]
addopts = "-v --color=yes"
env_files = ["test.env"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E", "W", "F"]

[tool.ruff.lint.isort]
known-first-party = ["dbt"]

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.hatch.version]
path = "dbt/adapters/confluent/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["dbt"]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
package = "dbt-confluent"
title_format = "{name} {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/confluentinc/dbt-confluent/issues/{issue})"
